{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 1350,
  "lineage": "ed02c7f3-e92a-6e01-c13f-7e140c8e8d49",
  "resources": [
    {
      "module": "module.IGW",
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "IGWinfo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722702750:internet-gateway/igw-0a2c0155ee19caddf",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-00c3f65af01861ce3"
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "test_IGW"
                ]
              }
            ],
            "id": "igw-0a2c0155ee19caddf",
            "internet_gateway_id": "igw-0a2c0155ee19caddf",
            "owner_id": "897722702750",
            "tags": {
              "Name": "test_IGW"
            }
          }
        }
      ]
    },
    {
      "module": "module.IGW",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722702750:internet-gateway/igw-0a2c0155ee19caddf",
            "id": "igw-0a2c0155ee19caddf",
            "owner_id": "897722702750",
            "tags": {
              "Name": "test_IGW"
            },
            "tags_all": {
              "Name": "test_IGW"
            },
            "vpc_id": "vpc-00c3f65af01861ce3"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-routetable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "testRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722702750:route-table/rtb-0d1f42bb110559bc2",
            "id": "rtb-0d1f42bb110559bc2",
            "owner_id": "897722702750",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a2c0155ee19caddf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pubRT"
            },
            "tags_all": {
              "Name": "pubRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c3f65af01861ce3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.IGW.aws_internet_gateway.gw",
            "module.IGW.data.aws_internet_gateway.IGWinfo",
            "module.aws-subnet.aws_subnet.test_subnet",
            "module.aws-subnet.data.aws_subnet.subnetinfo",
            "module.aws-vpc.aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-routetable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0698b596fb7bdc663",
            "route_table_id": "rtb-0d1f42bb110559bc2",
            "subnet_id": "subnet-0b2cec9a98d9c4202"
          },
          "dependencies": [
            "module.IGW.aws_internet_gateway.gw",
            "module.IGW.data.aws_internet_gateway.IGWinfo",
            "module.aws-routetable.aws_route_table.testRT",
            "module.aws-subnet.aws_subnet.test_subnet",
            "module.aws-subnet.data.aws_subnet.subnetinfo",
            "module.aws-vpc.aws_vpc.testvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd6ef10f3d585794",
            "route_table_id": "rtb-0d1f42bb110559bc2",
            "subnet_id": "subnet-02d9ddf50d01c5252"
          },
          "dependencies": [
            "module.IGW.aws_internet_gateway.gw",
            "module.IGW.data.aws_internet_gateway.IGWinfo",
            "module.aws-routetable.aws_route_table.testRT",
            "module.aws-subnet.aws_subnet.test_subnet",
            "module.aws-subnet.data.aws_subnet.subnetinfo",
            "module.aws-vpc.aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-subnet[0]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnetinfo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722702750:subnet/subnet-0b2cec9a98d9c4202",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "pubsubnet-1"
                ]
              }
            ],
            "id": "subnet-0b2cec9a98d9c4202",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722702750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "pubsubnet-1"
            },
            "vpc_id": "vpc-00c3f65af01861ce3"
          }
        }
      ]
    },
    {
      "module": "module.aws-subnet[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722702750:subnet/subnet-0b2cec9a98d9c4202",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2cec9a98d9c4202",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722702750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pubsubnet-1"
            },
            "tags_all": {
              "Name": "pubsubnet-1"
            },
            "vpc_id": "vpc-00c3f65af01861ce3"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-subnet[1]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnetinfo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722702750:subnet/subnet-02d9ddf50d01c5252",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "pubsubnet-2"
                ]
              }
            ],
            "id": "subnet-02d9ddf50d01c5252",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722702750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "pubsubnet-2"
            },
            "vpc_id": "vpc-00c3f65af01861ce3"
          }
        }
      ]
    },
    {
      "module": "module.aws-subnet[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722702750:subnet/subnet-02d9ddf50d01c5252",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d9ddf50d01c5252",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722702750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pubsubnet-2"
            },
            "tags_all": {
              "Name": "pubsubnet-2"
            },
            "vpc_id": "vpc-00c3f65af01861ce3"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722702750:vpc/vpc-00c3f65af01861ce3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f47ba6719f919b10",
            "default_route_table_id": "rtb-04285d42e4d75dc95",
            "default_security_group_id": "sg-010b62af36cdc6b83",
            "dhcp_options_id": "dopt-05bac93e56edcab7b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00c3f65af01861ce3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04285d42e4d75dc95",
            "owner_id": "897722702750",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.aws_ec2_instance",
      "mode": "data",
      "type": "aws_instance",
      "name": "instanceinfo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws_ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:897722702750:instance/i-0cfae9c4ce3938029",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cfae9c4ce3938029",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e1872583a55bd0c1",
            "private_dns": "ip-10-0-1-14.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.14",
            "public_ip": "34.238.146.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bfa7f10fb2f827f5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0c01075bcffd52caa"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2cec9a98d9c4202",
            "tags": {
              "Name": "VM-1"
            },
            "tags_all": {
              "Name": "VM-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c01075bcffd52caa"
            ]
          },
          "dependencies": [
            "module.aws-subnet.aws_subnet.test_subnet",
            "module.aws-subnet.data.aws_subnet.subnetinfo",
            "module.aws-vpc.aws_vpc.testvpc",
            "module.security_grp.aws_security_group.allow_tls"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:897722702750:instance/i-0be4c0e93e0f219b9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be4c0e93e0f219b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-082d7d8d13c64cc80",
            "private_dns": "ip-10-0-2-187.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.187",
            "public_ip": "3.226.235.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a331d21996c5f64e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0c01075bcffd52caa"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d9ddf50d01c5252",
            "tags": {
              "Name": "VM-2"
            },
            "tags_all": {
              "Name": "VM-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c01075bcffd52caa"
            ]
          },
          "dependencies": [
            "module.aws-subnet.aws_subnet.test_subnet",
            "module.aws-subnet.data.aws_subnet.subnetinfo",
            "module.aws-vpc.aws_vpc.testvpc",
            "module.security_grp.aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "module": "module.security_grp",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722702750:security-group/sg-0c01075bcffd52caa",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c01075bcffd52caa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "For HTTP",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "For SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "897722702750",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c3f65af01861ce3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_vpc.testvpc"
          ]
        }
      ]
    }
  ]
}